<resources>
    <string name="app_name">Vigilantes da Cidade</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="ttl_src_denunciations">Busca por denúncias</string>
    <string name="t1_description">\"Sonho que se sonha só\nÉ só um sonho que se sonha só\nMas sonho que se sonha junto é realidade\"\nVocê e Nós agindo em busca de um país melhor!!!</string>
    <string-array name="states">
        <item>Brasilia</item>
        <item>Paraíba</item>
    </string-array>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_login2">Login</string>
    <string name="novo_cadastro">Novo Cadastro</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="coment_rio">Comentário</string>
    <string name="por">Por:</string>
    <string name="title_activity_ac__maps">Map</string>
</resources>
